--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -155,7 +155,7 @@ Venha conhecer os encantos das Praias e Rios  do Pontal de Maceió e aproveite s
   <div id="copyright">
     <p class="fl_left">Copyright &copy; 2012 - All Rights Reserved - <a href="#">Pousada Paraíso do Pontal &hellip; </a></p>
       <p class="fl_left"> WebMaster &hellip; <a href="http://eboxbrasil.com.br">Erlon Carlos</a></p>
-    <p class="fl_right">Template by <a href="http://www.os-templates.com/" target="_blank" title="Free Website Templates">OS Templates</a></p>
+    <p class="fl_right">Template by. <a href="http://www.os-templates.com/" target="_blank" title="Free Website Templates">OS Templates</a></p>
     <br class="clear" />
   </div>
 </div>
