alteração no home

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,8 +8,30 @@
 	  <%= yield :head %>
   </head>
   <body>
-  	<center><h1>Teste Layout</h1></center>
-  	<h2>Veja como vica olayout de novo</h2>
-  <%= yield %>
+   <div id="featured_intro">
+    <div class="fl_left">
+    <a href="#"><img src="images/demo/LogoPousada1.jpg" alt="" /></a>
+    </div>
+    <div class="fl_right">
+    	
+      <h2>Pousada Paraíso do Pontal</h2>
+       <p>Com 365 dias de sol por ano, considerada a jóia do litoral leste cearence, Pontal do Maceió é muito tranqüila
+. Situada entre encontro das aguas do rio com mar, a vila tornou-se um pólo turístico com uma excelente infra-estrutura.</p>
+<p>
+Pousada Paraíso do Pontal oferece uma hospedagem tranqüila e ideal para quem deseja um atendimento personalizado,
+voltado ao conforto, e bem estar dos nossos clientes.</p>
+<p>
+Venha conhecer os encantos das Praias e Rios  do Pontal de Maceió e aproveite sua estada na nossa pousada.
+</p>
+      
+      
+    
+    </div>
+    <br class="clear" />
+    
+   
+  </div>
+  
+
   </body>
 </html>
