--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
   <div id="topbar">
     <div id="topnav">
       <ul>
-        <li class="active"><a href="index.html">Home</a></li>
+        <li class="active"><a href="home">Home</a></li>
         <li><a href="style-demo.html">Contato</a></li>
         <li><a href="full-width.html">Como chegar</a></li>
         <li><a href="#">Localidade</a>
@@ -80,27 +80,11 @@
 </div>
 <!-- ####################################################################################################### -->
 <div class="wrapper col4">
-  <div id="featured_intro">
-    <div class="fl_left">
-    <a href="#"><img src="images/demo/LogoPousada1.jpg" alt="" /></a>
-    </div>
-    <div class="fl_right">
-    	
-      <h2>Pousada Paraíso do Pontal</h2>
-       <p>Com 365 dias de sol por ano, considerada a jóia do litoral leste cearence, Pontal do Maceió é muito tranqüila
-. Situada entre encontro das aguas do rio com mar, a vila tornou-se um pólo turístico com uma excelente infra-estrutura.</p>
-<p>
-Pousada Paraíso do Pontal oferece uma hospedagem tranqüila e ideal para quem deseja um atendimento personalizado,
-voltado ao conforto, e bem estar dos nossos clientes.</p>
-<p>
-Venha conhecer os encantos das Praias e Rios  do Pontal de Maceió e aproveite sua estada na nossa pousada.
-</p>
-      
-      
-    
-    </div>
-    <br class="clear" />
-  </div>
+	
+	
+   <%= yield %>
+   
+   
 </div>
 <!-- ####################################################################################################### -->
 <div class="wrapper col5">
