--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,9 +3,10 @@
 <html lang="en">
  
   <body>
+  
    <div id="featured_intro">
     <div class="fl_left">
-    <a href="#"><img src="images/demo/LogoPousada1.jpg" alt="" /></a>
+    <a href="#"><img src="images/demo/LogoPousada1.jpg" width="350" height="200"  alt="" /></a>
     </div>
     <div class="fl_right">
     	
