--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -90,7 +90,7 @@
 <div class="wrapper col5">
   <div id="footer">
     <div class="footbox twitter">
-      <h2>Latest From Twitter</h2>
+      <h2>Últimas do Twitter</h2>
       <ul>
         <li><a href="#">@TwitterName</a> nibhpede faucibulum ris phasellentum elit sed hend quisque.  1 day ago</li>
         <li><a href="#">@TwitterName</a> tellentumst monterdum augue curabitae elit felit, elitligula adipiscingilla. 1 day ago</li>
@@ -112,7 +112,7 @@
       <br class="clear" />
     </div>
     <div class="footbox posts">
-      <h2>Serviços publicos</h2>
+      <h2>Serviços públicos</h2>
       <ul>
         <li><a href="#">190 - Polícia Militar</a></li>
         <li><a href="#">191 - Polícia Rodoviária Federal</a></li>
@@ -138,7 +138,7 @@
 <div class="wrapper col6">
   <div id="copyright">
     <p class="fl_left">Copyright &copy; 2012 - All Rights Reserved - <a href="#">Pousada Paraíso do Pontal &hellip; </a></p>
-      <p class="fl_left"> WebMaster &hellip; <a href="http://eboxbrasil.com.br">Erlon Carlos</a></p>
+      <p class="fl_left"> WebMaster &hellip; <a href="http://eboxbrasil.com.br" target="_blank" >Erlon Carlos</a></p>
     <p class="fl_right">Template by. <a href="http://www.os-templates.com/" target="_blank" title="Free Website Templates">OS Templates</a></p>
     <br class="clear" />
   </div>
