--- a/app/assets/stylesheets/featured_slide.css
+++ b/app/assets/stylesheets/featured_slide.css
@@ -12,10 +12,12 @@ Licence: <a href="http://www.os-templates.com/template-terms">Website Template L
 	height:250px;
 	margin:0 auto;
 	padding:25px 0 0 0;
-	background-color:#151515;
+	background-color:#FFFFFF;
+	
 	}
 
 #waterwheelCarousel > img{
 	display:none;
 	cursor:pointer;
+	
 	}
