--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -61,8 +61,8 @@ div.wrapper h1, div.wrapper h2, div.wrapper h3, div.wrapper h4, div.wrapper h5, 
 .col3 a{color:#63B6D9; background-color:#FFFFFF;}
 .col4{color:#999999; background-color:#FFFFFF; border:0px solid #999999;}
 .col4 a{color:#A97891; background-color:#FFFFFF;}
-.col5{color:#CCCCCC; background-color:#1D1D1D; border-top:2px solid #999999; border-bottom:2px solid #999999;}
-.col5 a{color:#63B6D9; background-color:#1D1D1D;}
+.col5{color:#CCCCCC; background-color:#000000; border-top:2px solid #999999; border-bottom:2px solid #999999;}
+.col5 a{color:#63B6D9; background-color:#000000;}
 .col6, .col6 a{color:#666666; background-color:#FFFFFF;}
 
 /* ----------------------------------------------Generalise-------------------------------------*/
@@ -379,7 +379,7 @@ div.wrapper h1, div.wrapper h2, div.wrapper h3, div.wrapper h4, div.wrapper h5, 
 	
 	#linha{
 	
-	background-color:#1D1D1D;
+	background-color:#000000;
 	border-bottom:1px dotted #585858;
 	}
 
@@ -398,7 +398,7 @@ div.wrapper h1, div.wrapper h2, div.wrapper h3, div.wrapper h4, div.wrapper h5, 
 #footer h2{
 	padding:0 0 5px 0;
 	color:#FFFFFF;
-	background-color:#1D1D1D;
+	background-color:#000000;
 	border-bottom:1px dotted #585858;
 	font-size:16px;
 	font-weight:bold;
