Formulário de contato

--- a/app/assets/stylesheets/featured_slide.css
+++ b/app/assets/stylesheets/featured_slide.css
@@ -12,7 +12,7 @@ Licence: <a href="http://www.os-templates.com/template-terms">Website Template L
 	height:250px;
 	margin:0 auto;
 	padding:25px 0 0 0;
-	background-color:#FFFFFF;
+	background-color:#E8E8E8;
 	
 	}
 
