--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -17,7 +17,7 @@ body{
 	font-size:13px;
 	font-family:Georgia, "Times New Roman", Times, serif;
 	color:#999999;
-	background-color:#151515;
+	background-color:#FF0000;
 	}
 
 img{display:block; margin:0; padding:0; border: 0px solid #999999   ;}
@@ -57,13 +57,13 @@ div.wrapper h1, div.wrapper h2, div.wrapper h3, div.wrapper h4, div.wrapper h5, 
 
 .col1, .col1 a{color:#666666; background-color:#FFFFFF;}
 .col2{color:#FFFFFF; background-color:#63B6D9;}
-.col3{color:#999999; background-color:#FFFFFF; padding:20px 0;}
+.col3{color:#999999; background-color:#E8E8E8; padding:20px 0;}
 .col3 a{color:#63B6D9; background-color:#FFFFFF;}
 .col4{color:#999999; background-color:#FFFFFF; border:0px solid #999999;}
-.col4 a{color:#A97891; background-color:#FFFFFF;}
+.col4 a{color:#63B6D9; background-color:#FFFFFF;}
 .col5{color:#CCCCCC; background-color:#000000; border-top:2px solid #999999; border-bottom:2px solid #999999;}
 .col5 a{color:#63B6D9; background-color:#000000;}
-.col6, .col6 a{color:#666666; background-color:#FFFFFF;}
+.col6, .col6 a{color:#FFFFFF; background-color:#FF0000;}
 
 /* ----------------------------------------------Generalise-------------------------------------*/
 
