--- a/app/assets/stylesheets/featured_slide.css
+++ b/app/assets/stylesheets/featured_slide.css
@@ -12,12 +12,14 @@ Licence: <a href="http://www.os-templates.com/template-terms">Website Template L
 	height:250px;
 	margin:0 auto;
 	padding:25px 0 0 0;
-	background-color:#E8E8E8;
+	
+	
 	
 	}
 
 #waterwheelCarousel > img{
 	display:none;
 	cursor:pointer;
-	
+	border: 4px solid;
+	border-color: #000000;
 	}
