--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,3 +1,10 @@
+<p>   Pousada Paraíso do Pontal</p> 
+                         
+                        <p>
+                            Avenida 27 de Maio, 1036 - Pontal de Maceió - Fortim-CE</p>
+                        <p>
+                            Fone: (88) 3413.2036 - 8811.4107</p>
+                        
 <h1>Contato</h1>
 <%= form_for(@contact) do |f| %>
 <% if @contact.errors.any? %>
