--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 </head>
 
 <body id="top">
-	<p style="color: green"><%= flash[:notice]%></p>
+	
 <div class="wrapper col1">
   <div id="header">
     <div class="fl_left">
@@ -62,20 +62,20 @@
 <!-- ####################################################################################################### -->
 <div class="wrapper col3">
   <div id="waterwheelCarousel">
-  	 <img src="images/waterwheelCarousel/f7.jpg" width="400" height="200" alt="" />
-    <img src="images/waterwheelCarousel/f10.jpg" width="400" height="200" alt="" />
-    <img src="images/waterwheelCarousel/p3.jpg" width="400" height="200" alt="" />
-    <img src="images/waterwheelCarousel/p6.jpg" width="400" height="200" alt="" />
-    <img src="images/waterwheelCarousel/p9.jpg" width="400" height="200" alt="" />
+  	 <img src="images/waterwheelCarousel/f7.jpg" width="400" height="200" alt="" title="click na imagem"/>
+    <img src="images/waterwheelCarousel/f10.jpg" width="400" height="200" alt="" title="click na imagem"/>
+    <img src="images/waterwheelCarousel/p3.jpg" width="400" height="200" alt="" title="click na imagem"/>
+    <img src="images/waterwheelCarousel/p6.jpg" width="400" height="200" alt="" title="click na imagem"/>
+    <img src="images/waterwheelCarousel/p9.jpg" width="400" height="200" alt="" title="click na imagem"/>
    
-    <img src="images/waterwheelCarousel/p2.jpg" width="400" height="200" alt="" />   
-      <img src="images/waterwheelCarousel/pousada.jpg" width="400" height="200" alt="" />
-    <img src="images/waterwheelCarousel/p1.jpg" width="400" height="200" alt="" />
-    <img src="images/waterwheelCarousel/p4.jpg" width="400" height="200" alt="" />
-    <img src="images/waterwheelCarousel/p8.jpg" width="400" height="200" alt="" />
-    <img src="images/waterwheelCarousel/p7.jpg" width="400" height="200" alt="" />
-    <img src="images/waterwheelCarousel/f24.jpg" width="400" height="200" alt="" />
-     <img src="images/waterwheelCarousel/f23.jpg" width="400" height="200" alt="" />
+    <img src="images/waterwheelCarousel/p2.jpg" width="400" height="200" alt="" title="click na imagem"/>   
+      <img src="images/waterwheelCarousel/pousada.jpg" width="400" height="200" alt="" title="click na imagem" />
+    <img src="images/waterwheelCarousel/p1.jpg" width="400" height="200" alt="" title="click na imagem"/>
+    <img src="images/waterwheelCarousel/p4.jpg" width="400" height="200" alt="" title="click na imagem"/>
+    <img src="images/waterwheelCarousel/p8.jpg" width="400" height="200" alt="" title="click na imagem"/>
+    <img src="images/waterwheelCarousel/p7.jpg" width="400" height="200" alt="" title="click na imagem"/>
+    <img src="images/waterwheelCarousel/f24.jpg" width="400" height="200" alt="" title="click na imagem"/>
+     <img src="images/waterwheelCarousel/f23.jpg" width="400" height="200" alt="" title="click na imagem"/>
   </div>
 </div>
 <!-- ####################################################################################################### -->
