--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -57,7 +57,7 @@ div.wrapper h1, div.wrapper h2, div.wrapper h3, div.wrapper h4, div.wrapper h5, 
 
 .col1, .col1 a{color:#666666; background-color:#FFFFFF;}
 .col2{color:#FFFFFF; background-color:#FF0000;}
-.col3{color:#999999; background:url("../images/fp4.jpg") ; padding:20px 0;}
+.col3{color:#999999; background-color:#FFFFFF; padding:20px 0;}
 .col3 a{color:#FF0000; background-color:#FFFFFF;}
 .col4{color:#999999; background-color:#FFFFFF; border:0px solid #999999;}
 .col4 a{color:#FF0000; background-color:#FFFFFF;}
